Add sitemap, privacypolicy用のCSS記述を追加
・CSS記述を追加した。

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -220,4 +220,11 @@ main ul{
 /* contact */
 
 /* sitemap */
+.sitemap main .inner{
+    margin: 50px;
+}
+
+.sitemap main ul li{
+    padding: 1em 0;
+}
 
