--- a/CSS/style.css
+++ b/CSS/style.css
@@ -216,6 +216,18 @@ main ul{
 
 
 /* cast */
+.cast main section{
+    display: flex;
+    margin-top: 50px;
+}
+
+.cast main section h2{
+    margin: 0;
+}
+
+.cast main section dl{
+    padding: 0 0 0 40px;
+}
 
 /* contact */
 
