improve CSSディレクトリの名前変更
・Apacheなどのサーバーがディレクトリ名（URL）の大文字小文字を区別してしまうため、CSSが読み込まれない問題が発生していた。
・フォルダ「CSS」を「css」と小文字に変更することで問題が解決された。

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -250,6 +250,10 @@ main textarea{
 }
 
 /* contact */
+.contact main p{
+    margin: 50px;
+}
+
 .contact main dl dd{
     border-bottom: solid 1px #cccccc;
     margin: 0;
